k8s/kustomize-cluster-apps/overlays/sonarr copy/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - hosts:
    - overseerr.k8s.javydekoning.com
    secretName: javydekoning-com-tls
  rules:
    - host: overseerr.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-service
                port:
                  name: http
